--- a/lab-intro_to_ml.ipynb
+++ b/lab-intro_to_ml.ipynb
@@ -1697,22 +1697,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7987072945521699"
+       "0.8064992614475628"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "knn.score(X_train, y_train)"
+    "knn.score(X_test, y_test)"
    ]
   },
   {
